--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Portfolio Website"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Rishabh Sabnavis"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://rishabh-sabnavis.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Rishabh Sabnavis"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Dallas, Texas"
+  employer         : "The University of Texas at Dallas"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "rishabhsabnavis@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
